fix: broken layout on landing page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.main {
+.main > div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
